--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="app.atividades.matc89.atividade1.MainActivity">
 
+    <TextView
+        android:id="@+id/acessaSite"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:hint="@string/in_site" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/addressSite"
+        android:layout_below="@+id/acessaSite"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true" />
+
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -16,14 +31,5 @@
         android:id="@+id/goSite"
         android:layout_below="@+id/addressSite"
         android:layout_alignParentStart="true" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/addressSite"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:text="Entre com o nome do site"
-        android:layout_alignParentEnd="true" />
 
 </RelativeLayout>
